Fixed RCS mags on E-N2
Also merged SpARCS and RCSLenS into single set of megacam columns and renamed irac columns to new masterlist standard #13

--- a/dmu1/dmu1_ml_Lockman-SWIRE/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1449,236 +1451,6 @@
    "source": [
     "\n",
     "megacam_origin.write(\"{}/lockman-swire_megacam_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['wfc_id',\n",
-       " 'ra',\n",
-       " 'dec',\n",
-       " 'm_ap_wfc_u',\n",
-       " 'merr_ap_wfc_u',\n",
-       " 'm_wfc_u',\n",
-       " 'merr_wfc_u',\n",
-       " 'm_ap_wfc_g',\n",
-       " 'merr_ap_wfc_g',\n",
-       " 'm_wfc_g',\n",
-       " 'merr_wfc_g',\n",
-       " 'm_ap_wfc_r',\n",
-       " 'merr_ap_wfc_r',\n",
-       " 'm_wfc_r',\n",
-       " 'merr_wfc_r',\n",
-       " 'm_ap_wfc_i',\n",
-       " 'merr_ap_wfc_i',\n",
-       " 'm_wfc_i',\n",
-       " 'merr_wfc_i',\n",
-       " 'm_ap_wfc_z',\n",
-       " 'merr_ap_wfc_z',\n",
-       " 'm_wfc_z',\n",
-       " 'merr_wfc_z',\n",
-       " 'f_ap_wfc_u',\n",
-       " 'ferr_ap_wfc_u',\n",
-       " 'f_wfc_u',\n",
-       " 'ferr_wfc_u',\n",
-       " 'flag_wfc_u',\n",
-       " 'f_ap_wfc_g',\n",
-       " 'ferr_ap_wfc_g',\n",
-       " 'f_wfc_g',\n",
-       " 'ferr_wfc_g',\n",
-       " 'flag_wfc_g',\n",
-       " 'f_ap_wfc_r',\n",
-       " 'ferr_ap_wfc_r',\n",
-       " 'f_wfc_r',\n",
-       " 'ferr_wfc_r',\n",
-       " 'flag_wfc_r',\n",
-       " 'f_ap_wfc_i',\n",
-       " 'ferr_ap_wfc_i',\n",
-       " 'f_wfc_i',\n",
-       " 'ferr_wfc_i',\n",
-       " 'flag_wfc_i',\n",
-       " 'f_ap_wfc_z',\n",
-       " 'ferr_ap_wfc_z',\n",
-       " 'f_wfc_z',\n",
-       " 'ferr_wfc_z',\n",
-       " 'flag_wfc_z',\n",
-       " 'flag_merged',\n",
-       " 'rcs_id',\n",
-       " 'm_megacam_i',\n",
-       " 'merr_megacam_i',\n",
-       " 'm_megacam_y',\n",
-       " 'merr_megacam_y',\n",
-       " 'f_megacam_i',\n",
-       " 'ferr_megacam_i',\n",
-       " 'flag_megacam_i',\n",
-       " 'f_megacam_y',\n",
-       " 'ferr_megacam_y',\n",
-       " 'flag_megacam_y',\n",
-       " 'ps1_id',\n",
-       " 'm_ap_gpc1_g',\n",
-       " 'merr_ap_gpc1_g',\n",
-       " 'm_gpc1_g',\n",
-       " 'merr_gpc1_g',\n",
-       " 'm_ap_gpc1_r',\n",
-       " 'merr_ap_gpc1_r',\n",
-       " 'm_gpc1_r',\n",
-       " 'merr_gpc1_r',\n",
-       " 'm_ap_gpc1_i',\n",
-       " 'merr_ap_gpc1_i',\n",
-       " 'm_gpc1_i',\n",
-       " 'merr_gpc1_i',\n",
-       " 'm_ap_gpc1_z',\n",
-       " 'merr_ap_gpc1_z',\n",
-       " 'm_gpc1_z',\n",
-       " 'merr_gpc1_z',\n",
-       " 'm_ap_gpc1_y',\n",
-       " 'merr_ap_gpc1_y',\n",
-       " 'm_gpc1_y',\n",
-       " 'merr_gpc1_y',\n",
-       " 'f_ap_gpc1_g',\n",
-       " 'ferr_ap_gpc1_g',\n",
-       " 'f_gpc1_g',\n",
-       " 'ferr_gpc1_g',\n",
-       " 'flag_gpc1_g',\n",
-       " 'f_ap_gpc1_r',\n",
-       " 'ferr_ap_gpc1_r',\n",
-       " 'f_gpc1_r',\n",
-       " 'ferr_gpc1_r',\n",
-       " 'flag_gpc1_r',\n",
-       " 'f_ap_gpc1_i',\n",
-       " 'ferr_ap_gpc1_i',\n",
-       " 'f_gpc1_i',\n",
-       " 'ferr_gpc1_i',\n",
-       " 'flag_gpc1_i',\n",
-       " 'f_ap_gpc1_z',\n",
-       " 'ferr_ap_gpc1_z',\n",
-       " 'f_gpc1_z',\n",
-       " 'ferr_gpc1_z',\n",
-       " 'flag_gpc1_z',\n",
-       " 'f_ap_gpc1_y',\n",
-       " 'ferr_ap_gpc1_y',\n",
-       " 'f_gpc1_y',\n",
-       " 'ferr_gpc1_y',\n",
-       " 'flag_gpc1_y',\n",
-       " 'sparcs_intid',\n",
-       " 'm_ap_megacam_u',\n",
-       " 'merr_ap_megacam_u',\n",
-       " 'f_ap_megacam_u',\n",
-       " 'ferr_ap_megacam_u',\n",
-       " 'm_megacam_u',\n",
-       " 'merr_megacam_u',\n",
-       " 'f_megacam_u',\n",
-       " 'ferr_megacam_u',\n",
-       " 'flag_megacam_u',\n",
-       " 'm_ap_megacam_g',\n",
-       " 'merr_ap_megacam_g',\n",
-       " 'f_ap_megacam_g',\n",
-       " 'ferr_ap_megacam_g',\n",
-       " 'm_ap_megacam_r',\n",
-       " 'merr_ap_megacam_r',\n",
-       " 'f_ap_megacam_r',\n",
-       " 'ferr_ap_megacam_r',\n",
-       " 'm_ap_megacam_z',\n",
-       " 'merr_ap_megacam_z',\n",
-       " 'f_ap_megacam_z',\n",
-       " 'ferr_ap_megacam_z',\n",
-       " 'dxs_id',\n",
-       " 'm_ap_wfcam_k',\n",
-       " 'merr_ap_wfcam_k',\n",
-       " 'm_wfcam_k',\n",
-       " 'merr_wfcam_k',\n",
-       " 'f_ap_wfcam_k',\n",
-       " 'ferr_ap_wfcam_k',\n",
-       " 'f_wfcam_k',\n",
-       " 'ferr_wfcam_k',\n",
-       " 'flag_wfcam_k',\n",
-       " 'servs_intid',\n",
-       " 'swire_intid',\n",
-       " 'f_ap_irac_i3',\n",
-       " 'ferr_ap_irac_i3',\n",
-       " 'f_irac_i3',\n",
-       " 'ferr_irac_i3',\n",
-       " 'f_ap_irac_i4',\n",
-       " 'ferr_ap_irac_i4',\n",
-       " 'f_irac_i4',\n",
-       " 'ferr_irac_i4',\n",
-       " 'm_ap_irac_i3',\n",
-       " 'merr_ap_irac_i3',\n",
-       " 'm_irac_i3',\n",
-       " 'merr_irac_i3',\n",
-       " 'flag_irac_i3',\n",
-       " 'm_ap_irac_i4',\n",
-       " 'merr_ap_irac_i4',\n",
-       " 'm_irac_i4',\n",
-       " 'merr_irac_i4',\n",
-       " 'flag_irac_i4',\n",
-       " 'uhs_id',\n",
-       " 'flag_cleaned',\n",
-       " 'flag_gaia',\n",
-       " 'stellarity',\n",
-       " 'ebv',\n",
-       " 'help_id',\n",
-       " 'field',\n",
-       " 'specz_id',\n",
-       " 'zspec',\n",
-       " 'zspec_qual',\n",
-       " 'zspec_association_flag',\n",
-       " 'f_ap_irac_i1',\n",
-       " 'ferr_ap_irac_i1',\n",
-       " 'm_ap_irac_i1',\n",
-       " 'merr_ap_irac_i1',\n",
-       " 'f_irac_i1',\n",
-       " 'ferr_irac_i1',\n",
-       " 'm_irac_i1',\n",
-       " 'merr_irac_i1',\n",
-       " 'flag_irac_i1',\n",
-       " 'f_ap_irac_i2',\n",
-       " 'ferr_ap_irac_i2',\n",
-       " 'm_ap_irac_i2',\n",
-       " 'merr_ap_irac_i2',\n",
-       " 'f_irac_i2',\n",
-       " 'ferr_irac_i2',\n",
-       " 'm_irac_i2',\n",
-       " 'merr_irac_i2',\n",
-       " 'flag_irac_i2',\n",
-       " 'f_wfcam_j',\n",
-       " 'ferr_wfcam_j',\n",
-       " 'm_wfcam_j',\n",
-       " 'merr_wfcam_j',\n",
-       " 'flag_wfcam_j',\n",
-       " 'f_ap_wfcam_j',\n",
-       " 'ferr_ap_wfcam_j',\n",
-       " 'm_ap_wfcam_j',\n",
-       " 'merr_ap_wfcam_j',\n",
-       " 'f_megacam_g',\n",
-       " 'ferr_megacam_g',\n",
-       " 'm_megacam_g',\n",
-       " 'merr_megacam_g',\n",
-       " 'flag_megacam_g',\n",
-       " 'f_megacam_r',\n",
-       " 'ferr_megacam_r',\n",
-       " 'm_megacam_r',\n",
-       " 'merr_megacam_r',\n",
-       " 'flag_megacam_r',\n",
-       " 'f_megacam_z',\n",
-       " 'ferr_megacam_z',\n",
-       " 'm_megacam_z',\n",
-       " 'merr_megacam_z',\n",
-       " 'flag_megacam_z']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "master_catalogue.colnames"
    ]
   },
   {
