Fixed DECaLS id non-uniqueness on all fields
this means to get back to object we need to break decals_intid into brick plus objid or else add the identical unique decals_intid to the pristine catalogues #2 #3 #4 #5 #7 #8 #15 #16

--- a/dmu1/dmu1_ml_GAMA-09/1.3_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_GAMA-09/1.3_DECaLS.ipynb
@@ -773,6 +773,7 @@
    "source": [
     "imported_columns = OrderedDict({\n",
     "        \"objid\": \"decals_id\",\n",
+    "        \"brickid\": \"brickid\",\n",
     "        \"ra\": \"decals_ra\",\n",
     "        \"dec\": \"decals_dec\",\n",
     "        \"decam_flux\": \"decam_flux_TEMP\",\n",
@@ -786,6 +787,9 @@
     "catalogue = Table.read(\"../../dmu0/dmu0_DECaLS/data/DECaLS_GAMA-09.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
+    "    \n",
+    "catalogue[\"decals_id\"] = 100000*catalogue[\"brickid\"].astype(np.int64) + catalogue[\"decals_id\"].astype(np.int64)\n",
+    "catalogue.remove_columns(\"brickid\")\n",
     "\n",
     "epoch = 2017\n",
     "\n",
