--- a/dmu1/dmu1_ml_NGP/1.1_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_NGP/1.1_DECaLS.ipynb
@@ -792,6 +792,7 @@
    "source": [
     "imported_columns = OrderedDict({\n",
     "        \"objid\": \"decals_id\",\n",
+    "        \"brickid\": \"brickid\",\n",
     "        \"ra\": \"decals_ra\",\n",
     "        \"dec\": \"decals_dec\",\n",
     "        \"decam_flux\": \"decam_flux_TEMP\",\n",
@@ -805,6 +806,9 @@
     "catalogue = Table.read(\"../../dmu0/dmu0_DECaLS/data/DECaLS_HATLAS-NGP.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
+    "    \n",
+    "catalogue[\"decals_id\"] = 100000*catalogue[\"brickid\"].astype(np.int64) + catalogue[\"decals_id\"].astype(np.int64)\n",
+    "catalogue.remove_columns(\"brickid\")\n",
     "\n",
     "epoch = 2017\n",
     "\n",
