HS82 ready to run full tests
I will try it on Apollo first. If it works I will implement the same method on XMM-LSS #15

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
@@ -316,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
