--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_Merging_low_memory.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_Merging_low_memory.ipynb
@@ -627,7 +627,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "flag_gaia_columns = [column for column in master_catalogue.colnames\n",
@@ -1052,7 +1054,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#master_catalogue[columns].write(\"{}/master_catalogue_herschel-stripe-82_low_memory{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
@@ -1123,7 +1127,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n=0\n",
@@ -1189,7 +1195,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    sub_catalogue.write(\"{}/master_catalogue_herschel-stripe-82_low-memory{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
+    "    sub_catalogue.write(\"{}/sub_catalogue_herschel-stripe-82_low-memory{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
     "    n += 1"
    ]
   }
