Added spaces to PSF on all legacy survey
If the table has been opened by Topcat or for some unknown reason there are sometimes spaces in teh type column for PSF so we add with and without for safety #1 #9 #10 #13 #14 #16 #22 #23

--- a/dmu1/dmu1_ml_NGP/1.4_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_NGP/1.4_LegacySurvey.ipynb
@@ -163,7 +163,8 @@
     "    magnitudes[band], magnitude_errors[band] = flux_to_mag_vect(flux[band] * 3.631e-6 ,flux_errors[band] * 3.631e-6)\n",
     "    \n",
     "    stellarities[band] = np.full(len(orig_legacy),0., dtype='float32')\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1. #For some reason this fiel\n",
+    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF\" ] = 1.\n",
+    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1. \n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
