--- a/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
@@ -166,6 +166,7 @@
     "    \n",
     "    stellarities[band] = np.full(len(orig_legacy),0., dtype='float32')\n",
     "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF\" ] = 1.\n",
+    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
@@ -957,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
