--- a/dmu1/dmu1_ml_xFLS/1.5_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_xFLS/1.5_LegacySurvey.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -166,6 +168,7 @@
     "    \n",
     "    stellarities[band] = np.full(len(orig_legacy),0., dtype='float32')\n",
     "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF\" ] = 1.\n",
+    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
