Fixed voice column naming error on E-S1
#11

--- a/dmu1/dmu1_ml_ELAIS-S1/1.3_ESIS-VOICE.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/1.3_ESIS-VOICE.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -118,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t = Table.read(\"../../dmu0/dmu0_ESIS-VOICE/data/esis_b2vr_cat_03_HELP-coverage.fits\")\n",
@@ -687,16 +691,16 @@
     "    \n",
     "    catalogue.add_column(Column(\n",
     "        data = flux * 1.e6,\n",
-    "        name = \"f_megacam_{}\".format(band)\n",
+    "        name = \"f_voice_{}\".format(band)\n",
     "    ))\n",
     "    catalogue.add_column(Column(\n",
     "        data = fluxerr * 1.e6,\n",
-    "        name = \"ferr_megacam_{}\".format(band)\n",
+    "        name = \"ferr_voice_{}\".format(band)\n",
     "    ))\n",
     "    \n",
     "    # Band-flag column\n",
     "    catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), \n",
-    "                             name=\"flag_megacam_{}\".format(band)\n",
+    "                             name=\"flag_voice_{}\".format(band)\n",
     "    ))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting.\n",
