Fixed bug on NGP
we only have decam z on ngp but need to check on whole field #16

--- a/dmu1/dmu1_ml_NGP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_NGP/3_Checks_and_diagnostics.ipynb
@@ -207,11 +207,11 @@
    "outputs": [],
    "source": [
     "u_bands = [          ]\n",
-    "g_bands = [\"DECam g\", \"GPC1 g\", \"BASS g\"]\n",
-    "r_bands = [\"DECam r\", \"GPC1 r\", \"BASS r\"]\n",
-    "i_bands = [\"DECam i\", \"GPC1 i\"]\n",
+    "g_bands = [           \"GPC1 g\", \"BASS g\"]\n",
+    "r_bands = [           \"GPC1 r\", \"BASS r\"]\n",
+    "i_bands = [           \"GPC1 i\"]\n",
     "z_bands = [\"DECam z\", \"GPC1 z\", \"BASS z\"]\n",
-    "y_bands = [\"DECam y\", \"GPC1 y\"]"
+    "y_bands = [           \"GPC1 y\"]"
    ]
   },
   {
