Fixed decam missing columns on GAMA12 and 15 merge
#7 #3

--- a/dmu1/dmu1_ml_GAMA-12/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-12/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -849,7 +851,7 @@
     "    1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_kids_u']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_kids_g']) +\n",
@@ -949,7 +951,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1049,7 +1053,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue[columns].write(\"{}/master_catalogue_gama-12{}.fits\".format(OUT_DIR, SUFFIX))"
