--- a/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
@@ -681,7 +681,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "was_observed_optical = inMoc(\n",
@@ -737,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Check the detection bands of the pristine catalogues\n",
@@ -753,11 +757,11 @@
     "    1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_z']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_y']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_y']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_kids_u']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_kids_g']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_kids_r']) +\n",
@@ -810,7 +814,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -933,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
