[dmu1_ml_XMM-LSS] Try on vulcain
- We tried to process the XMM-LSS master list on vulcain using an
  alternative saving method. But it failed.

- Relate to #4.

--- a/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
@@ -1137,7 +1137,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -2820,7 +2822,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# SpARCS is a catalogue of sources detected in r (with fluxes measured at \n",
@@ -2886,7 +2890,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "has_optical_flux = nb_optical_flux >= 2\n",
@@ -3071,7 +3077,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/master_catalogue_xmm-lss{}.fits\".format(OUT_DIR, SUFFIX))"
+    "#master_catalogue[columns].write(\"{}/master_catalogue_xmm-lss{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
   },
   {
@@ -3097,6 +3103,22 @@
     "#    master_catalogue[columns][low_idx:high_idx].write(\n",
     "#        \"{}/master_catalogue_xmm-lss{}_part{}.csv\".format(OUT_DIR, SUFFIX,part_nb), format=\"ascii.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"{}/master_catalogue_xmm-lss{}.csv\".format(OUT_DIR, SUFFIX), \"w\") as out:\n",
+    "    out.write(\",\".join(master_catalogue.colnames))\n",
+    "    out.write(\"\\n\")\n",
+    "    for row in master_catalogue:\n",
+    "        out.write(\",\".join([str(_) for _ in row]))\n",
+    "        out.write(\"\\n\")"
+   ]
   }
  ],
  "metadata": {
@@ -3115,7 +3137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
