--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ELAIS-N1 - Mergin HELP data products\n",
+    "\n",
+    "This notebook merges the various HELP data products on ELAIS-N1.\n",
+    "\n",
+    "It is first used to create a catalogue that will be used for SED fitting by CIGALE by merging the optical master list, the photo-z and the XID+ far infrared fluxes.  Then, this notebook is used to incorporate the CIGALE physical parameter estimations and generate the final HELP data product on the field."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,7 +19,9 @@
    },
    "outputs": [],
    "source": [
-    "FIRST_RUN_FOR_CIGALE = True"
+    "# Set this to true to produce only the catalogue for CIGALE and to false \n",
+    "# to continue and merge the CIGALE results too.\n",
+    "FIRST_RUN_FOR_CIGALE = False"
    ]
   },
   {
@@ -48,7 +61,8 @@
    "source": [
     "# Master list\n",
     "\n",
-    "ml = Table.read(\"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20171016.fits\")\n",
+    "ml = Table.read(\n",
+    "    \"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20171016.fits\")\n",
     "ml.meta = None"
    ]
   },
@@ -64,9 +78,11 @@
     "# There are two catalogues on SWIRE and SERVS coverage that must be \n",
     "# merged (they don't overlap).\n",
     "\n",
-    "mips24_servs = Table.read(\"../../dmu26/dmu26_XID+MIPS_ELAIS-N1/data/dmu26_XID+MIPS_ELAIS-N1_SERVS_cat_20170725.fits\")\n",
+    "mips24_servs = Table.read(\"../../dmu26/dmu26_XID+MIPS_ELAIS-N1/data/\"\n",
+    "                          \"dmu26_XID+MIPS_ELAIS-N1_SERVS_cat_20170725.fits\")\n",
     "mips24_servs.meta = None\n",
-    "mips24_swire = Table.read(\"../../dmu26/dmu26_XID+MIPS_ELAIS-N1/data/dmu26_XID+MIPS_ELAIS-N1_SWIRE_cat_20170725.fits\")\n",
+    "mips24_swire = Table.read(\"../../dmu26/dmu26_XID+MIPS_ELAIS-N1/data/\"\n",
+    "                          \"dmu26_XID+MIPS_ELAIS-N1_SWIRE_cat_20170725.fits\")\n",
     "mips24_swire.meta = None\n",
     "mips24_swire.remove_column(\"flag_mips24\")  # duplicated column\n",
     "\n",
@@ -104,9 +120,11 @@
     "# There are two catalogues on SWIRE and SERVS coverage that must be \n",
     "# merged (they don't overlap).\n",
     "\n",
-    "pacs_swire = Table.read(\"../../dmu26/dmu26_XID+PACS_ELAIS-N1/data/dmu26_XID+PACS_ELAIS-N1_SWIRE_cat_20170808.fits\")\n",
+    "pacs_swire = Table.read(\"../../dmu26/dmu26_XID+PACS_ELAIS-N1/data/\"\n",
+    "                        \"dmu26_XID+PACS_ELAIS-N1_SWIRE_cat_20170808.fits\")\n",
     "pacs_swire.meta = None\n",
-    "pacs_servs = Table.read(\"../../dmu26/dmu26_XID+PACS_ELAIS-N1/data/dmu26_XID+PACS_ELAIS-N1_SERVS_cat_20170808.fits\")\n",
+    "pacs_servs = Table.read(\"../../dmu26/dmu26_XID+PACS_ELAIS-N1/data/\"\n",
+    "                        \"dmu26_XID+PACS_ELAIS-N1_SERVS_cat_20170808.fits\")\n",
     "pacs_servs.meta = None\n",
     "\n",
     "xid_pacs = vstack([pacs_servs, pacs_swire])\n",
@@ -151,9 +169,11 @@
     "# There are two catalogues on SWIRE and SERVS coverage that must be \n",
     "# merged (they don't overlap).\n",
     "\n",
-    "spire_servs = Table.read(\"../../dmu26/dmu26_XID+SPIRE_ELAIS-N1/data/dmu26_XID+SPIRE_ELAIS-N1_SERVS_cat_20170725.fits\")\n",
+    "spire_servs = Table.read(\"../../dmu26/dmu26_XID+SPIRE_ELAIS-N1/data/\"\n",
+    "                         \"dmu26_XID+SPIRE_ELAIS-N1_SERVS_cat_20170725.fits\")\n",
     "spire_servs.meta = None\n",
-    "spire_swire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_ELAIS-N1/data/dmu26_XID+SPIRE_ELAIS-N1_SWIRE_cat_20170808.fits\")\n",
+    "spire_swire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_ELAIS-N1/data/\"\n",
+    "                         \"dmu26_XID+SPIRE_ELAIS-N1_SWIRE_cat_20170808.fits\")\n",
     "spire_swire.meta = None\n",
     "\n",
     "xid_spire = vstack([spire_servs, spire_swire])\n",
@@ -202,14 +222,14 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "photoz = Table.read(\n",
-    "    \"../../dmu24/dmu24_ELAIS-N1/data/master_catalogue_elais-n1_20170706_photoz_20170725_irac1_optimised.fits\")\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_ELAIS-N1/data/\"\n",
+    "    \"master_catalogue_elais-n1_20170706_photoz_20170725_irac1_optimised.fits\")\n",
     "photoz.meta = None\n",
     "\n",
     "photoz = photoz['help_id', 'z1_median']\n",
     "photoz['z1_median'].name = 'redshift'\n",
     "\n",
-    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # Eazy uses -99 for missing values"
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -311,7 +331,8 @@
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
+    "               'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
     "                        'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
@@ -319,8 +340,9 @@
     "            colname = col_tpl.format(band)\n",
     "            if colname in merged_table.colnames:\n",
     "                columns.append(colname)\n",
-    "    columns += ['stellarity', 'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
-    "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
+    "    columns += ['stellarity', 'stellarity_origin', 'flag_cleaned',\n",
+    "                'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
+    "                'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
@@ -334,7 +356,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mergin CIGALE outputs"
+    "# Mergin CIGALE outputs\n",
+    "\n",
+    "We merge the CIGALE outputs to the main catalogue. The CIGALE products provides several χ² with associated thresholds. For simplicity, we convert these two values to flags."
    ]
   },
   {
@@ -353,15 +377,20 @@
     "flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
     "flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
     "flag_cigale = (\n",
-    "    (cigale[\"UVoptIR_best.reduced_chi_square\"] <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "    (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
+    "         <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
     "    flag_cigale_opt & flag_cigale_ir)\n",
     "flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
     "\n",
     "cigale.add_columns([\n",
-    "    MaskedColumn(flag_cigale, \"flag_cigale\", dtype=int, fill_value=-1),\n",
-    "    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", dtype=int, fill_value=-1),\n",
-    "    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", dtype=int, fill_value=-1),\n",
-    "    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", dtype=int, fill_value=-1)\n",
+    "    MaskedColumn(flag_cigale, \"flag_cigale\", \n",
+    "                 dtype=int, fill_value=-1),\n",
+    "    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
+    "                 dtype=int, fill_value=-1),\n",
+    "    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
+    "                 dtype=int, fill_value=-1),\n",
+    "    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
+    "                 dtype=int, fill_value=-1)\n",
     "])\n",
     "\n",
     "cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
@@ -373,9 +402,11 @@
     "cigale['IR_bayes.dust.luminosity'].name = \"cigale_dustlumin_ironly\"\n",
     "cigale['IR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_ironly_err\"\n",
     "\n",
-    "cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
-    "               'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err',\n",
-    "               'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly']"
+    "cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
+    "                'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
+    "                'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
+    "                'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
+    "                'flag_cigale_ironly']"
    ]
   },
   {
@@ -401,7 +432,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sorting columns"
+    "# Sorting columns\n",
+    "\n",
+    "We sort the columns by increasing band wavelength."
    ]
   },
   {
@@ -434,10 +467,12 @@
     "        if colname in merged_table.colnames:\n",
     "            columns.append(colname)\n",
     "columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
-    "            'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err',\n",
-    "            'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly',\n",
-    "            'stellarity', 'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
-    "            'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']"
+    "            'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
+    "            'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
+    "            'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
+    "            'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
+    "            'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
+    "            'zspec_association_flag']"
    ]
   },
   {
