[dmu32_ELAIS-N1] Correct English (thanks to Raphael)

--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 - Mergin HELP data products\n",
+    "# ELAIS-N1 - Merging HELP data products\n",
     "\n",
     "This notebook merges the various HELP data products on ELAIS-N1.\n",
     "\n",
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mergin CIGALE outputs\n",
+    "# Merging CIGALE outputs\n",
     "\n",
     "We merge the CIGALE outputs to the main catalogue. The CIGALE products provides several χ² with associated thresholds. For simplicity, we convert these two values to flags."
    ]
